--- a/app/src/main/res/drawable/rounded_search_box.xml
+++ b/app/src/main/res/drawable/rounded_search_box.xml
@@ -5,17 +5,14 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="40dp"/>
-            <solid android:color="#5C5C5F"/>
+            <solid android:color="@color/TertiaryPrimarycolor"/>
         </shape>
     </item>
 
     <!-- Gradient overlay -->
     <item>
         <shape android:shape="rectangle">
-            <gradient
-                android:angle="315"
-                android:startColor="#4527A0"
-                android:endColor="#456289" />
+
             <corners android:radius="40dp" /> <!-- Match the corner radius -->
         </shape>
     </item>
