--- a/app/src/main/res/drawable/background_supprt_2.xml
+++ b/app/src/main/res/drawable/background_supprt_2.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
+<!--    <gradient-->
+<!--        android:startColor="#282830"-->
+<!--        android:endColor="#000000"-->
+<!--        android:angle="40"/>-->
+
     <gradient
-        android:startColor="#282830"
-        android:endColor="#000000"
+        android:startColor="@color/SecondPrimaryColor"
+        android:endColor="@color/TertiaryPrimarycolor"
         android:angle="40"/>
+
+    <corners android:radius="20dp"/>
 
 <!--        <gradient-->
 <!--            android:startColor="#282830"-->
