--- a/app/src/main/res/drawable/rating_dialog_background.xml
+++ b/app/src/main/res/drawable/rating_dialog_background.xml
@@ -1,17 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+
     <!-- Background color -->
-    <solid android:color="@android:color/white" />
+    <solid android:color="#333334" />
 
     <!-- Rounded corners -->
-    <corners android:radius="16dp" />
+    <corners android:radius="15dp" />
 
-    <!-- Padding around the content -->
-    <padding
-        android:left="16dp"
-        android:top="16dp"
-        android:right="16dp"
-        android:bottom="16dp" />
 
     <!-- Optional shadow (only works with certain layouts like CardView) -->
     <size android:height="200dp"/>
