--- a/app/src/main/res/drawable/ripple_effect.xml
+++ b/app/src/main/res/drawable/ripple_effect.xml
@@ -2,22 +2,18 @@
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
     android:color="?attr/colorControlHighlight">
 
-    <!-- Gradient background with corner radius -->
     <item>
         <shape android:shape="rectangle">
-            <gradient
-                android:angle="315"
-                android:startColor="#4527A0"
-                android:endColor="#456289" />
-            <corners android:radius="15dp" />
+            <solid android:color="@color/colorPrimary" />
+            <!-- Set your desired corner radius here -->
+            <corners android:radius="45dp" />
         </shape>
     </item>
 
-    <!-- Ripple mask -->
     <item android:id="@android:id/mask">
         <shape android:shape="rectangle">
             <solid android:color="@android:color/white" />
-            <corners android:radius="15dp" />
+            <corners android:radius="45dp" />
         </shape>
     </item>
 
