--- a/app/src/main/res/drawable/rounded_button.xml
+++ b/app/src/main/res/drawable/rounded_button.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/colorAccent"/>
-    <corners android:radius="12dp"/>
+    <solid android:color="@color/dialog_color_2"/>
+    <corners android:radius="50dp"/>
     <padding android:left="16dp" android:top="8dp" android:right="16dp" android:bottom="8dp"/>
 </shape>
