--- a/app/src/main/res/drawable/rounder_corner_intruder.xml
+++ b/app/src/main/res/drawable/rounder_corner_intruder.xml
@@ -13,9 +13,9 @@
     <item>
         <shape android:shape="rectangle">
             <gradient
-                android:angle="315"
-                android:startColor="#4527A0"
-                android:endColor="#456289" />
+                android:angle="90"
+                android:startColor="#f7937c"
+                android:endColor="#f3e6db" />
             <corners android:radius="40dp" /> <!-- Match the corner radius -->
         </shape>
     </item>
