--- a/app/src/main/res/drawable/secondary_background.xml
+++ b/app/src/main/res/drawable/secondary_background.xml
@@ -2,13 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-    <gradient
-        android:startColor="#4B5076"
-        android:endColor="#292930"
-        android:angle="30"/>
+
 
     <solid
-        android:color="#2E2E37"/>
+        android:color="@color/TertiaryPrimarycolor"/>
 
     <corners
         android:radius="20dp"/>
