--- a/app/src/main/res/layout/intruder_item.xml
+++ b/app/src/main/res/layout/intruder_item.xml
@@ -3,59 +3,64 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="wrap_content"
     app:cardCornerRadius="8dp"
-    android:layout_marginTop="8dp"
-    android:layout_marginBottom="8dp">
+    app:cardElevation="4dp"
+    app:cardBackgroundColor="@color/TertiaryPrimarycolor"
+    android:layout_margin="10dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp">
-        
+        android:padding="5dp">
+
+        <!-- Intruder Image -->
         <ImageView
             android:id="@+id/intruder_selfiee"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:padding="5dp"
+            android:layout_marginStart="5dp"
+            android:background="@drawable/just_round_corner"
             android:scaleType="centerCrop"
-            android:layout_margin="5dp"
+            android:layout_marginEnd="16dp" />
 
-            />
-
+        <!-- Intruder Date -->
         <TextView
             android:id="@+id/intruder_date"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10sp"
-            android:layout_marginStart="10dp"
             android:layout_toEndOf="@id/intruder_selfiee"
             android:text="15/10/2024"
-            android:textSize="20sp"/>
+            android:textSize="18sp"
+            android:textColor="@color/white"
+            android:layout_marginTop="5dp"
+            android:fontFamily="sans-serif"
+            android:layout_marginBottom="8dp"
+            android:layout_alignParentTop="true" />
 
+        <!-- Intruder Time -->
         <TextView
             android:id="@+id/intruder_time"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="45dp"
-            android:layout_marginStart="10dp"
+            android:layout_below="@id/intruder_date"
             android:layout_toEndOf="@id/intruder_selfiee"
             android:text="01:51"
-            android:textSize="20sp"/>
+            android:textSize="18sp"
+            android:textColor="@color/white"
+            android:fontFamily="sans-serif" />
 
-
+        <!-- Tick Mark Image -->
         <ImageView
             android:id="@+id/intruder_tickMarkImageView"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/baseline_check_box_24"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:layout_alignParentEnd="true"
-            android:layout_centerInParent="true"
-            android:layout_marginEnd="8dp"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="10dp"
+            android:scaleType="fitXY"
             android:visibility="gone"
-            />
-
-
+            android:src="@drawable/baseline_check_box_24" />
     </RelativeLayout>
-
 </androidx.cardview.widget.CardView>
