--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -36,39 +36,63 @@
 
     <style name="digitBtn" parent="commonBtn">
 
-        <item name="android:textColor">@color/Black</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@drawable/ripple_effect</item>
+        <item name="android:elevation">0dp</item>
 
     </style>
 
 
     <style name="operatorbtn" parent="commonBtn">
 
-        <item name="android:textColor">@color/btnbackground2</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="backgroundTint">@color/calciDisplay</item>
+
+    </style>
+
+    <style name="operatorbtnequal" parent="commonBtn">
+
+        <item name="android:textColor">@color/white</item>
+<!--        <item name="backgroundTint">@drawable/background_fab</item>-->
+<!--        <item name="backgroundTint"/>#AAFFFFFF</item> &lt;!&ndash; Optional color tint &ndash;&gt;-->
+
+        <item name="android:background">@drawable/button_background_fab</item> <!-- Use the layered drawable -->
+
+
     </style>
 
     <style name="commonBtn" parent="Widget.MaterialComponents.ExtendedFloatingActionButton">
 
-        <item name="android:layout_width">70dp</item>
-        <item name="android:layout_height">70dp</item>
-        <item name="cornerRadius">10dp</item>
-        <item name="backgroundTint">@color/white</item>
-        <item name="android:textSize">32sp</item>
-        <item name="android:layout_margin">8dp</item>
+        <item name="android:layout_width">80dp</item>
+        <item name="android:layout_height">80dp</item>
+        <item name="cornerRadius">45dp</item>
+        <item name="android:textSize">35sp</item>
+        <item name="android:layout_margin">6dp</item>
+        <item name="backgroundTint">#282830</item>
+        <item name="android:padding">6dp</item>
+        <item name="android:background">@drawable/ripple_effect</item>
 
     </style>
 
 
 
-    <style name="settingItem" parent="MaterialAlertDialog.Material3.Body.Text" >
+    <style name="settingItem" parent="MaterialAlertDialog.Material3.Body.Text">
         <item name="android:textSize">20sp</item>
         <item name="android:textColor">@color/Black</item>
-        <item name="android:layout_marginStart">30dp</item>
         <item name="android:padding">10dp</item>
+        <item name="android:background">@drawable/setting_ripple_ori</item>
     </style>
+
 
 
 
     <style name="RatingBarStyle" parent="Widget.AppCompat.RatingBar">
+<!--        color of non selected star-->
+        <item name="colorControlNormal">@color/limeclr</item>
+
+<!--        color of selected star-->
+        <item name="colorControlActivated">@color/btnbackground2</item>
+
         <item name="android:progressDrawable">@drawable/custom_ratingbar</item>
         <item name="android:minHeight">48dp</item>
         <item name="android:maxHeight">48dp</item>
